03-DemoWebsite/02-Deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: demo-app
  namespace: demo-website
  labels:
    app: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
        - name: demo-app
          image: fabiofernandes/nginx
