03-DemoWebsite/03-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: demo-website
spec:
  selector:
    app: demo-app
  ports:
    - name: http
      targetPort: 80
      port: 80
